footer, hamburger menu, horizontal scroll corrected

--- a/website/src/Home/container_3.css
+++ b/website/src/Home/container_3.css
@@ -1,5 +1,6 @@
 .container3{
     background-color: white;
+    padding-bottom: 2em;
 }
 
 .container-3-child-heading
@@ -37,10 +38,12 @@
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
-    font-size: 2.2vw;
+    font-size: 2vw;
     text-align: right;
     color: #000000;
-    line-height: 5vw;
+    line-height: 4vw;
+    margin-left: 1.5em;
+    margin-right: 1em;
 }
 @media only screen and (max-width:600px)
 {
