--- a/website/src/Home/container_4.css
+++ b/website/src/Home/container_4.css
@@ -1,6 +1,7 @@
 .container4
 {
     background-color:#E7A908;
+    padding: 1em 0 2em 0;
 }
 
 .container-4-child-heading
@@ -28,7 +29,7 @@
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
-    font-size: 2.2vw;
+    font-size: 2vw;
     line-height: 4vw;
     color:white;
 }
