--- a/website/src/eventData/eventcomponent1.css
+++ b/website/src/eventData/eventcomponent1.css
@@ -15,6 +15,7 @@ font-size: 4.5vw;
 line-height: 6vw;
 color:#E7A908;
 margin-left: 4vw;
+padding-top: 1em;
 }
 
 
@@ -22,7 +23,7 @@ margin-left: 4vw;
 font-family: Raleway;
 font-style: normal;
 font-weight: normal;
-font-size: 1.5vw;
+font-size: 2vw;
 line-height: 3vw;
 margin-left: ;
 width: 40vw;
@@ -212,7 +213,7 @@ margin-top: 2vw;
     .eventcontainer1-subcontainer-eventinfo 
     {
       line-height: 15px;
-    font-size: 15px;
+    font-size: 13.5px;
     width: 87%;
     margin-left: 21px;
     padding-right: 0;
